Enable CXXFLAGS overriding on the command line.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,38 @@ endif ()
 
 set (CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
-set(CMAKE_CXX_FLAGS                "-std=c++11 -Wextra -Wall -pedantic")
-set(CMAKE_CXX_FLAGS_DEBUG          "-O0 -g")
-set(CMAKE_CXX_FLAGS_MINSIZEREL     "-Os")
-set(CMAKE_CXX_FLAGS_RELEASE        "-O4")
-set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
+# Check if the user provided CXXFLAGS on the command line.
+if (CMAKE_CXX_FLAGS)
+    set(CXXFLAGS_PROVIDED true)
+ENDIF ()
+
+if (CXXFLAGS_PROVIDED)
+    set(CMAKE_CXX_FLAGS_DEBUG          "")
+    set(CMAKE_CXX_FLAGS_MINSIZEREL     "")
+    set(CMAKE_CXX_FLAGS_RELEASE        "")
+    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "")
+else ()
+    set(CMAKE_CXX_FLAGS                "-std=c++11 -Wextra -Wall -pedantic")
+    set(CMAKE_CXX_FLAGS_DEBUG          "-O0 -g")
+    set(CMAKE_CXX_FLAGS_MINSIZEREL     "-Os")
+    set(CMAKE_CXX_FLAGS_RELEASE        "-O4")
+    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
+endif ()
+
+if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
+    execute_process(COMMAND ${CMAKE_CXX_COMPILER} -dumpversion
+                    OUTPUT_VARIABLE GCC_VERSION)
+    if (NOT (GCC_VERSION VERSION_GREATER 4.7 OR GCC_VERSION VERSION_EQUAL 4.7))
+        message(FATAL_ERROR "${PROJECT_NAME} requires g++ 4.7 or greater.")
+    endif ()
+elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+    if (NOT CXXFLAGS_PROVIDED)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+    endif ()
+else ()
+    message(FATAL_ERROR "Your C++ compiler does not support C++11.")
+endif ()
+
 if (ENABLE_DEBUG)
     set(CMAKE_BUILD_TYPE Debug)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCPPA_DEBUG")
@@ -25,18 +52,6 @@ endif ()
 if (DISABLE_CONTEXT_SWITCHING)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCPPA_DISABLE_CONTEXT_SWITCHING")
 endif()
-
-if("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
-    execute_process(COMMAND ${CMAKE_CXX_COMPILER} -dumpversion
-                    OUTPUT_VARIABLE GCC_VERSION)
-    if (NOT (GCC_VERSION VERSION_GREATER 4.7 OR GCC_VERSION VERSION_EQUAL 4.7))
-        message(FATAL_ERROR "${PROJECT_NAME} requires g++ 4.7 or greater.")
-    endif ()
-elseif("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
-else()
-    message(FATAL_ERROR "Your C++ compiler does not support C++11.")
-endif ()
 
 set(LIBCPPA_SRC
     src/abstract_tuple.cpp
