split unit_tests into 15 single tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -201,9 +201,6 @@ enable_testing()
 add_subdirectory(unit_testing)
 add_subdirectory(examples)
 add_subdirectory(benchmarks)
-#add_subdirectory(benchmarks)
-#add_dependencies(unit_tests libcppa)
-#add_dependencies(benchmarks libcppa)
 add_dependencies(announce_example_1 libcppa)
 add_dependencies(announce_example_2 libcppa)
 add_dependencies(announce_example_3 libcppa)
@@ -213,12 +210,26 @@ add_dependencies(dancing_kirby libcppa)
 add_dependencies(dining_philosophers libcppa)
 add_dependencies(hello_world_example libcppa)
 add_dependencies(math_actor_example libcppa)
-add_dependencies(unit_tests libcppa)
 add_dependencies(actor_creation libcppa)
 add_dependencies(mailbox_performance libcppa)
 add_dependencies(mixed_case libcppa)
 add_dependencies(distributed libcppa)
 add_dependencies(matching libcppa)
+add_dependencies(test__atom libcppa)
+add_dependencies(test__intrusive_containers libcppa)
+add_dependencies(test__local_group libcppa)
+add_dependencies(test__pattern libcppa)
+add_dependencies(test__remote_actor libcppa)
+add_dependencies(test__serialization libcppa)
+add_dependencies(test__uniform_type libcppa)
+add_dependencies(test__fixed_vector libcppa)
+add_dependencies(test__intrusive_ptr libcppa)
+add_dependencies(test__match libcppa)
+add_dependencies(test__primitive_variant libcppa)
+add_dependencies(test__ripemd_160 libcppa)
+add_dependencies(test__spawn libcppa)
+add_dependencies(test__type_list libcppa)
+add_dependencies(test__yield_interface libcppa)
 
 string(TOUPPER ${CMAKE_BUILD_TYPE} build_type)
 set(CONTEXT_SWITCHING true)
