sync_send unit test

--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -17,7 +17,7 @@ include_directories(. ${cppa_INCLUDE} ${Boost_INCLUDE_DIRS})
 set(EXAMPLE_LIBS ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${Boost_THREAD_LIBRARY})
 
 macro(add_unit_test name)
-    add_executable(test__${name} test__${name}.cpp)
+    add_executable(test__${name} test__${name}.cpp ${ARGN})
     target_link_libraries(test__${name} ${EXAMPLE_LIBS})
     add_test(${name} ${EXECUTABLE_OUTPUT_PATH}/test__${name})
 endmacro()
@@ -26,7 +26,7 @@ add_unit_test(atom)
 add_unit_test(intrusive_containers)
 add_unit_test(local_group)
 add_unit_test(pattern)
-add_unit_test(remote_actor)
+add_unit_test(remote_actor ping_pong.cpp)
 add_unit_test(serialization)
 add_unit_test(uniform_type)
 add_unit_test(fixed_vector)
@@ -34,6 +34,7 @@ add_unit_test(intrusive_ptr)
 add_unit_test(match)
 add_unit_test(primitive_variant)
 add_unit_test(ripemd_160)
-add_unit_test(spawn)
+add_unit_test(spawn ping_pong.cpp)
 add_unit_test(type_list)
 add_unit_test(yield_interface)
+add_unit_test(sync_send)
