--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,9 +95,10 @@ set(LIBCPPA_SRC
     src/fiber.cpp
     src/group.cpp
     src/group_manager.cpp
+    src/ipv4_acceptor.cpp
+    src/ipv4_io_stream.cpp
     src/local_actor.cpp
     src/mailman.cpp
-    src/native_socket.cpp
     src/network_manager.cpp
     src/object.cpp
     src/object_array.cpp
