updated paths to benchmark sources

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -4,11 +4,11 @@ project(cppa_benchmarks CXX)
 # Set up environment paths to cmake modules and libcppa
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(actor_creation actor_creation.cpp)
-add_executable(mailbox_performance mailbox_performance.cpp)
-add_executable(mixed_case mixed_case.cpp)
-add_executable(distributed distributed.cpp)
-add_executable(matching matching.cpp)
+add_executable(actor_creation cppa/actor_creation.cpp)
+add_executable(mailbox_performance cppa/mailbox_performance.cpp)
+add_executable(mixed_case cppa/mixed_case.cpp)
+add_executable(distributed cppa/distributed.cpp)
+add_executable(matching cppa/matching.cpp)
 
 # search for libs
 if(NOT cppa_LIBRARY)
