added Maching.scala to Makefile

--- a/benchmarks/scala/Makefile
+++ b/benchmarks/scala/Makefile
@@ -4,7 +4,7 @@ LIBPATH=/home/neverlord/akka-2.0.1/lib/akka
 CLASSPATH=$(shell for i in $(LIBPATH)/*.jar ; do printf %s $$i: ; done)
 FLAGS=-cp $(CLASSPATH)
 
-FILES=ActorCreation.scala Distributed.scala MailboxPerformance.scala MixedCase.scala
+FILES=ActorCreation.scala Distributed.scala MailboxPerformance.scala MixedCase.scala Matching.scala
 CLASSES=$(FILES:.scala=.class)
 
 %.class: %.scala
