--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,12 @@ endif ()
 if (ENABLE_DEBUG)
   set(CMAKE_BUILD_TYPE Debug)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCPPA_DEBUG")
-else ()
+#else ()
+#  set(CMAKE_BUILD_TYPE RelWithDebInfo)
+endif ()
+
+# set build default build type if not set
+if (not CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE RelWithDebInfo)
 endif ()
 
