got rid of boost::thread dependency by switching from boost::thread_specific_ptr to pthread_(get|set)specific

--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -9,12 +9,14 @@ if(NOT cppa_LIBRARY)
     find_package(Libcppa REQUIRED)
 endif (NOT cppa_LIBRARY)
 
-find_package(Boost COMPONENTS thread REQUIRED)
+#find_package(Boost COMPONENTS thread REQUIRED)
+find_package(Boost REQUIRED)
+
 
 link_directories(${Boost_LIBRARY_DIRS})
 include_directories(. ${cppa_INCLUDE} ${Boost_INCLUDE_DIRS})
 
-set(EXAMPLE_LIBS ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${Boost_THREAD_LIBRARY})
+set(EXAMPLE_LIBS ${CMAKE_DL_LIBS} ${CPPA_LIBRARY})
 
 macro(add_unit_test name)
     add_executable(test__${name} test__${name}.cpp ${ARGN})
