got rid of boost::thread dependency by switching from boost::thread_specific_ptr to pthread_(get|set)specific

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -21,12 +21,12 @@ if(NOT cppa_LIBRARY)
     find_package(Libcppa REQUIRED)
 endif (NOT cppa_LIBRARY)
 
-find_package(Boost COMPONENTS thread REQUIRED)
+find_package(Boost COMPONENTS)
 
 link_directories(${Boost_LIBRARY_DIRS})
 include_directories(. ${CPPA_INCLUDE} ${Boost_INCLUDE_DIRS})
 
-set(EXAMPLE_LIBS ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${Boost_THREAD_LIBRARY})
+set(EXAMPLE_LIBS ${CMAKE_DL_LIBS} ${CPPA_LIBRARY})
 
 target_link_libraries(announce_example_1 ${EXAMPLE_LIBS})
 target_link_libraries(announce_example_2 ${EXAMPLE_LIBS})
