--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,16 +6,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wextra -Wall -pedantic")
 # Set up environment paths to cmake modules and libcppa
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(announce_example_1 announce_example_1.cpp)
-add_executable(announce_example_2 announce_example_2.cpp)
-add_executable(announce_example_3 announce_example_3.cpp)
-add_executable(announce_example_4 announce_example_4.cpp)
-add_executable(announce_example_5 announce_example_5.cpp)
-add_executable(dancing_kirby dancing_kirby.cpp)
-add_executable(dining_philosophers dining_philosophers.cpp)
-add_executable(hello_world_example hello_world_example.cpp)
-add_executable(math_actor_example math_actor_example.cpp)
-
 # search for libs
 if(NOT cppa_LIBRARY)
     find_package(Libcppa REQUIRED)
@@ -27,14 +17,18 @@ find_package(PTHREAD REQUIRED)
 link_directories(${Boost_LIBRARY_DIRS})
 include_directories(. ${CPPA_INCLUDE} ${Boost_INCLUDE_DIRS} ${PTHREAD_INCLUDE_DIR})
 
-set(EXAMPLE_LIBS ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${PTHREAD_LIBRARIES})
+macro(add_example name)
+    add_executable(${name} ${name}.cpp ${ARGN})
+    target_link_libraries(${name} ${CMAKE_DL_LIBS} ${CPPA_LIBRARY} ${PTHREAD_LIBRARIES})
+endmacro()
 
-target_link_libraries(announce_example_1 ${EXAMPLE_LIBS})
-target_link_libraries(announce_example_2 ${EXAMPLE_LIBS})
-target_link_libraries(announce_example_3 ${EXAMPLE_LIBS})
-target_link_libraries(announce_example_4 ${EXAMPLE_LIBS})
-target_link_libraries(announce_example_5 ${EXAMPLE_LIBS})
-target_link_libraries(dancing_kirby ${EXAMPLE_LIBS})
-target_link_libraries(dining_philosophers ${EXAMPLE_LIBS})
-target_link_libraries(hello_world_example ${EXAMPLE_LIBS})
-target_link_libraries(math_actor_example ${EXAMPLE_LIBS})
+add_example(announce_example_1)
+add_example(announce_example_2)
+add_example(announce_example_3)
+add_example(announce_example_4)
+add_example(announce_example_5)
+add_example(dancing_kirby)
+add_example(dining_philosophers)
+add_example(hello_world_example)
+add_example(math_actor_example)
+add_example(distributed_math_actor_example)
