--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -248,6 +248,7 @@ add_dependencies(mailbox_performance libcppa)
 add_dependencies(mixed_case libcppa)
 add_dependencies(distributed libcppa)
 add_dependencies(matching libcppa)
+add_dependencies(distributed_math_actor_example libcppa)
 add_dependencies(test__atom libcppa)
 add_dependencies(test__intrusive_containers libcppa)
 add_dependencies(test__local_group libcppa)
